frontend/test/should_fail/index_exec_edge_fromIndexFromTo_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	{ i:set<AEdge>=edgesFromIndexFrom(j, j) }
}